<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:background="@drawable/login_bg"
	 >

	
    <!-- 界面顶部title -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top">
        
        <ImageButton
            android:id="@+id/findpass_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/title_back"
           	 />
        
        <TextView 
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:height="50dp"
		    android:text="@string/findpass_title"
		    android:layout_centerInParent="true"
		    android:gravity="center"
		    android:textSize="20sp"
		    android:textColor="#FFFFFF"
		    android:textAlignment="center"/>
        
        
    </RelativeLayout>

    <!-- 手机号码 -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/login_input_normal">
        
       	<TextView 
             android:id="@+id/findpass_phone_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:textColor="#999999"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:textSize="18sp"
             android:text="@string/findpass_phone_text"/>
   
		    <EditText 
		        android:id="@+id/findpass_phone_tips"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:hint="@string/findpass_phone_tips"
		        android:textColorHint="#CDCDCD"
		        android:layout_toRightOf="@id/findpass_phone_text"
		        android:background="@null"
		        android:inputType="phone"

		        />
        
    </RelativeLayout>
    
    
    <!-- 短信验证码 -->
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:background="@drawable/login_input_normal">
	    
	    <TextView 
             android:id="@+id/findpass_message_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:textColor="#999999"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:textSize="18sp"
             android:text="@string/findpass_message"/>
   
		    <EditText 
		        android:id="@+id/findpass_message_input"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_toRightOf="@id/findpass_message_text"
		        android:hint=""
		        android:background="@null"
		        android:inputType="text"
		        />
		    
		    <Button 
		        android:id="@+id/findpass_send"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:background="@drawable/login_button"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="20dp"
		        android:text="@string/findpass_message_text"
		        android:textColor="#FFFFFF"
		      	/>
	    
	    
	</RelativeLayout>

    
     <Button 
         android:id="@+id/findpass_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="40dp"
         android:textColor="#FFFFFF"
         android:background="@drawable/denglu"
         android:text="@string/findpass_nextstep"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	 android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="10dp"
         android:textAlignment="center"/>
     

</LinearLayout>
