<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:background="@drawable/login_bg"
	 >

	
    <!-- 界面顶部title -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top">
        
        <ImageButton
            android:id="@+id/resetpass_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/title_back"
           	 />
        
        <TextView 
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:height="50dp"
		    android:text="@string/resetpass_title"
		    android:layout_centerInParent="true"
		    android:gravity="center"
		    android:textSize="20sp"
		    android:textColor="#FFFFFF"
		    android:textAlignment="center"/>
        
        
    </RelativeLayout>

    <!-- 新密码 -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/login_input_normal">
        
       	<TextView 
             android:id="@+id/resetpass_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:textColor="#999999"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:textSize="12sp"
             android:text="@string/resetpass_new_pass"/>
   
		    <EditText 
		        android:id="@+id/resetpass_new_input"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:hint=""
		        android:layout_toRightOf="@id/resetpass_new"
		        android:background="@null"
		        android:inputType="textPassword"

		        />
        
    </RelativeLayout>
    
    
    <!-- 确认密码 -->
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:background="@drawable/login_input_normal">
	    
	    <TextView 
             android:id="@+id/resetpass_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:textColor="#999999"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:textSize="12sp"
             android:text="@string/resetpass_confirm_pass"/>
   
		    <EditText 
		        android:id="@+id/resetpass_confirm_input"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:hint=""
		        android:layout_toRightOf="@id/resetpass_confirm"
		        android:background="@null"
		        android:inputType="text"

		        />
		    
	    
	</RelativeLayout>

    
     <Button 
         android:id="@+id/resetpass_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="40dp"
         android:textColor="#FFFFFF"
         android:background="@drawable/denglu"
         android:text="@string/resetpass_submit"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	 android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="10dp"
         android:textAlignment="center"/>
     

</LinearLayout>
